--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<title>Starfield</title>
 </head>
 <body>
-	
+	<div class="slidercontainer">
+		<input  class ="slider"type="range" min="1" max="100" value="50" id="speedRange">
+	</div>
 </body>
 
 </html>
