added music and fullscreen button aswell as a volume slider//TODO find a way to increase speed dynamically and change the music

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="app.js"defer></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
+
 	<link rel="stylesheet" href="style.css">
 	<title>Starfield</title>
 </head>
 <body>
 	<div class="slidercontainer">
+		<button id="immersion" class="btn">Immersion</button>
+		<button id="music" class="btn"><i class="fa fa-volume-up"></i></button>
 		<input  class ="slider"type="range" min="1" max="100" value="50" id="speedRange">
 	</div>
 </body>
