fixed fullscreen bug and changed slider color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="slidercontainer">
-		<button id="immersion" class="btn">Immersion</button>
+		<button id="immersion" class="btn"><i class="fa fa-expand" aria-hidden="true"></i></button>
 		<button id="music" class="btn"><i class="fa fa-volume-up"></i></button>
 		<input  class ="slider"type="range" min="1" max="100" value="50" id="speedRange">
 	</div>
